# ABSim

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt
algorithms/include/: algorithm.h  decay3body.h  decayalgorithm.h  particlealgorithm.h
algorithms/src/: decay3body.cpp
backend/: CMakeLists.txt  backend.h
backend/cpu/: cpu.h
backend/cputhreads/: cputhreads.cpp  cputhreads.h  threadpool.cpp  threadpool.h
backend/include/: CPUBackend.h  backend.h
backend/openmp/: openmp.cpp  openmp.h
backend/src/: CPUBackend.cpp  threadpool.cpp
common/: CMakeLists.txt
common/include/: clock.h  fourvector.h  linkedlist.h  msgservice.h  properties.h  random.h  types.h  vector3.h
common/src/: clock.cpp  random.cpp
dict/: ABSIMLinkDef.h
docs/: DoxygenLayout.xml  doxyfile
eventmodel/: CMakeLists.txt
eventmodel/include/: beam.h  decay.h  decaydescriptor.h  event.h  genphasespace.h  particle.h  particleproperty.h  particlestore.h  vertex.h
eventmodel/src/: beam.cpp  decay.cpp  decaydescriptor.cpp  genphasespace.cpp
include/: ABSim.h  algorithm.h  configservice.h  decay.h  decayalgorithm.h  decaydescriptor.h  event.h  fourvector.h  genphasespace.h  memorymanager.h  msgservice.h  particle.h  particlealgorithm.h  particleproperty.h  particlestore.h  random.h  sequence.h  test_platform.h  tupleservice.h  types.h  vector3.h  vertex.h  welcome.h
main/src/: ABSim.cpp
models/: CMakeLists.txt
models/dalitz/: CMakeLists.txt
models/dalitz/include/: amplitude.h  coefficient.h  configfile.h  flatte.h  parameter.h  phasespace.h  random.h  relbreitwigner.h  resonance.h
models/dalitz/src/: amplitude.cpp  configfile.cpp  configureamplitude.cpp  flatte.cpp  random.cpp  relbreitwigner.cpp
python/: particle.py  particles.py
src/: ABSim.cpp  configservice.cpp  decay.cpp  decayalgorithm.cpp  decaydescriptor.cpp  event.cpp  genphasespace.cpp  msgservice.cpp  particlealgorithm.cpp  particleproperty.cpp  particlestore.cpp  random.cpp  sequence.cpp  tupleservice.cpp  welcome.cpp
tests/: CMakeLists.txt  catch.hpp  test_decaydescriptor.cpp  test_particleproperty.cpp
tupling/: CMakeLists.txt  TuplingLinkDef.h
tupling/include/: compositeentry.h  entry.h  entrybase.h  functors.h  particleentry.h  particlentry.h  treewriter.h
tupling/src/: compositeentry.cpp  entry.cpp  entrybase.cpp  functors.cpp  particleentry.cpp  treewriter.cpp
