if (TARGET_BACKEND STREQUAL "CPU")
    include_directories(cpu)
    file(GLOB backend_sources "cpu/*cpp")
    add_library(Backend STATIC ${backend_sources})
elseif (TARGET_BACKEND STREQUAL "THREADS")
    include_directories(cputhreads)
    file(GLOB backend_sources "cputhreads/*cpp")
    #--- Find threads.
    find_package(Threads REQUIRED)
    add_library(Backend STATIC ${backend_sources} ${CMAKE_THREAD_LIBS_INIT})
elseif (TARGET_BACKEND STREQUAL "OPENMP")
    include_directories(openmp)
    file(GLOB backend_sources "openmp/*cpp")
    add_library(Backend STATIC ${backend_sources})
elseif(TARGET_BACKEND STREQUAL "GPU")
    include_directories(gpu)
    file(GLOB backend_sources "gpu/*cpp")
    add_library(Backend STATIC ${backend_sources})
endif()